Fix project overlay and header spacing

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,5 +1,5 @@
 .footer {
   text-align: center;
-  padding: 1rem;
-  border-top: 1px solid lightgray;
+  padding: 3rem;
+  /* border-top: 1px solid lightgray; */
 }
