--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,9 +1,9 @@
-.header {
+/* .header {
   border-bottom: 1px solid lightgray;
-}
+} */
 
 .nav-item {
-  margin: 1rem;
+  margin: 3rem 3rem 3rem 0.5rem;
   cursor: pointer;
 }
 
